--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -1,8 +1,12 @@
 @media screen and (max-width: 700px) {
     #main-orbit {
-        width: 80%;
-        height: 80vw;
+        width: 70%;
+        height: 70vw;
         border-radius: 100%;
         top: 300px;
+    }
+
+    #x-mas-msg-text {
+        font-size: xx-small;
     }
 }
